# sklearn-protocols

./: .gitignore  LICENSE  Pipfile  README.md  mypy.ini  pytest.ini  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pytest.yaml
sklearn_protocols/: __init__.py  base.py  model.py  support.py
tests/: test_all_sklearn_estimators.py  test_base.py  test_models.py  test_support.py
