[metadata]
name = sklearn_protocols
version = attr: sklearn_protocols.__version__
license_files = LICENSE
author = hmasdev
author_email = hmasuidev1com@gmail.com
url = http://github.com/hmasdev/sklearn-protocols
description = sklearn-protocols: protocols for regressors, classifiers and transformers
long_description = file: README.md
long_description_content_type = text/markdown
keywords = 
    scikit learn
    machine learning
    protocols
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10


[options]
packages = find:

tests_require = 
    pytest>=6.0
    pytest-cov>=2.10
    flake8>=3.8
    mypy>=0.900

[options.packages.find]
exclude =
    tests*